2008-04-27  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gobject/pygenum.c (pyg_enum_richcompare): Fix: raise warning as
	exception if asked by PyErr_Warn().

	* gobject/pygflags.c (pyg_flags_richcompare):  Don't return NULL
	after warning; more useful warning message.

	(#480424, borrowing code by Mark Doffman)

2008-04-21  Johan Dahlin  <johan@gnome.org>

	* codegen/h2def.py: Update link to defs format discussion

2008-04-15  Johan Dahlin  <johan@gnome.org>

	* gobject/gobjectmodule.c (init_gobject): Set 
	gobject.GObject.__module__ to gobject._gobject, this
	helps pylint to check public methods of GObject subclasses

	* tests/Makefile.am (tests): 
	* tests/test_gobject.py (TestGObjectAPI.testGObjectModule): 
	Add a test for this

	(#523821, Simon Schampijer)

2008-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* gio/gio.defs (write_async): document.
	Add default values to all flags parameters.

2008-04-11  Johan Dahlin  <johan@gnome.org>

	* gio/gio.defs (read_async, read): document.
	Set io_priority default to G_PRIORITY_DEFAULT.

2008-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* gio/gfile.override:
	* gio/ginputstream.override:
	* gio/goutputstream.override:
	* tests/test_gio.py:
	Move around the order of the callback argument to async methods,
	so it comes before priority and cancellable, which can have default
	values.

2008-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* gio/Makefile.am:
	* gio/__init__.py:
	* gio/gappinfo.override:
	* gio/gio.defs:
	* gio/gio.override:
	* tests/test_gio.py:
	Implement GAppInfo constructor, add tests.

2008-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* gio/Makefile.am:
	* gio/gfileinfo.override:
	* gio/gio.defs:
	* gio/gio.override:
	* tests/test_gio.py:
	Wrap GFileInfo.list_attributes(), add tests and
	set the default of GFileQueryInfoFlags args to G_FILE_QUERY_INFO_NONE.

2008-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/option.py: Fix a typo
	* tests/test_option.py: